Remove unused classes and add ORDER_BY functionality in SpecBuilder